@@ -587,6 +587,7 @@ exit 0
 
 %changelog
 * Mon Nov  7 2005 Jeff Johnson <jbj@jbj.org> 4.4.3-0.39
+- generate executable(foo) run-time shell requirements, opt-in for now.
 
 * Sun Nov  6 2005 Jeff Johnson <jbj@jbj.org> 4.4.3-0.38
 - autogenerate libtool *.la dependencies (#159221).
